[package]
name = "secp256k1-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
secp256k1 = { version = "0.24.2", features = ["rand-std", "recovery"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
